// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`code tabs > should ignore other items > complex loose 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"ts"}]' :active="1">
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should ignore other items > complex tight 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"ts"}]' :active="1">
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should ignore other items > loose 1`] = `
"<CodeTabs :data='[{"id":"js"}]' :active="0">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should ignore other items > tight 1`] = `
"<CodeTabs :data='[{"id":"js"}]' :active="0">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should render multiple block > loose 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"ts"}]'>
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should render multiple block > tight 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"ts"}]'>
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should render single block > loose 1`] = `
"<CodeTabs :data='[{"id":"js"}]'>
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should render single block > tight 1`] = `
"<CodeTabs :data='[{"id":"js"}]'>
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support active > loose 1`] = `
"<CodeTabs :data='[{"id":"js"}]' :active="0">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support active > multiple loose 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"ts"}]' :active="1">
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support active > multiple tight 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"ts"}]' :active="1">
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support active > tight 1`] = `
"<CodeTabs :data='[{"id":"js"}]' :active="0">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support id > id with dash 1`] = `
"<CodeTabs :data='[{"id":"js"}]' tab-id="event-id">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support id > id with space 1`] = `
"<CodeTabs :data='[{"id":"js"}]' tab-id="id with space">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support id > id with space in the start and end 1`] = `
"<CodeTabs :data='[{"id":"js"}]' tab-id="id starts and having space in the end">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support id > simple id 1`] = `
"<CodeTabs :data='[{"id":"js"}]' tab-id="event">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support value > loose 1`] = `
"<CodeTabs :data='[{"id":"javascript"}]'>
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support value > multiple loose 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"typescript"}]' :active="1">
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support value > multiple tight 1`] = `
"<CodeTabs :data='[{"id":"javascript"},{"id":"typescript"}]' :active="1">
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre><code class="language-ts">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should support value > tight 1`] = `
"<CodeTabs :data='[{"id":"javascript"}]' :active="0">
<template #title0="{ value, isActive }">js</template>
<template #tab0="{ value, isActive }">
<pre><code class="language-js">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should work with code import 1`] = `
"<CodeTabs :data='[{"id":"js"},{"id":"ts"}]' :active="1">
<template #title0="{ value, isActive }">js</template>
<template #title1="{ value, isActive }">ts</template>
<template #tab0="{ value, isActive }">
<pre v-pre><code class="language-js">const a = 1;
</code></pre>
</template>
<template #tab1="{ value, isActive }">
<pre v-pre><code class="language-ts">Error when resolving path</code></pre>
</template>
</CodeTabs>
"
`;
